# StateMachineCode2Graph

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
exe/: CMakeLists.txt
lib/: CMakeLists.txt  StateMachine.cpp  StateMachine.hpp
lib/Utils/: StrongType.hpp
unit_tests/: CMakeLists.txt  main.cpp  testStateMachine.cpp
